Fix div overflow

--- a/frontend/src/components/Dropdown/PackageDropdown/PackageDropdown.css
+++ b/frontend/src/components/Dropdown/PackageDropdown/PackageDropdown.css
@@ -43,7 +43,7 @@
     padding-inline: 10px;
     height: 30px;
     line-height: 30px;
-    width: 100%;
+    width: 90%;
 }
 
 .general-reserve-button {
